--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel ="stylesheet"  href="style.css" type="text/css">
   
   <title>Frontend Mentor | Order summary card</title>
 
@@ -15,8 +17,10 @@
   </style>
 </head>
 <body>
+  <div class="background-image"></div>
 
-  Order Summary
+  <div class= "main">
+    Order Summary
 
   You can now listen to millions of songs, audiobooks, and podcasts on any 
   device anywhere you like!
@@ -28,6 +32,8 @@
 
   Proceed to Payment
   Cancel Order
+  s
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
