--- a/index.html
+++ b/index.html
@@ -3,41 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel ="stylesheet" href="https://fonts.google.com/specimen/Red+Hat+Display">
+  <link rel ="stylesheet"  href="style.css">
 
-  <link rel ="stylesheet"  href="style.css" type="text/css">
-  
   <title>Frontend Mentor | Order summary card</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution a { color: hsl(228, 45%, 44%); }    
   </style>
 </head>
 <body>
-  <div class="background-image"></div>
 
   <div class= "main">
-    Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
+    <div class="hero">
+      <img src="images/illustration-hero.svg" alt="SvG Hero is Here" class="hero">
+    </div>
+    <br>
+    <h1>Order Summary</h1>
+<p>
+  You can now listen to millions of songs, audiobooks, and podcasts on any
   device anywhere you like!
+</p>
 
-  Annual Plan
+<div class="plan">
+  <img src = "images/icon-music.svg" alt="Music Icon">
+
+  <p class="annual">
+ <span>Annual Plan </span>
+  <br>
   $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  s
+</p>
+<div class="change">
+  <a href="#">Change</a>
   </div>
-  
+
+</div>
+
+<div class="proceed">
+<a href="#"> Proceed to Payment</a>
+</div>
+
+<div class="cancel">
+  <a href="#" >Cancel Order</a>
+ </div>
+
+  </div>
+  <br>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Shekinah Shalom-Hope</a>.
   </div>
+
+
 </body>
 </html>
