Fix Centering Issue

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </style>
 </head>
 <body>
+  <div class="centerdContent">
 
   <div class= "main">
     <div class="hero">
@@ -57,6 +58,7 @@
     Coded by <a href="#">Shekinah Shalom-Hope</a>.
   </div>
 
+</div>
 
 </body>
 </html>
